--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,23 @@
     ],
     "require": {
         "phpoffice/phpword": "^0.18.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "AmoDocGenerator\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AmoDocGenerator\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.4.0"
+        }
     }
 }
